--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -36,7 +36,7 @@
                     {{ form.remember.label(class="form-check-label") }}
                 </div>
                 <small class="text-muted ml-2">
-                    <a href="{{ url_for('reset_request') }}">Forgot Password</a>
+                    <a href="{{ url_for('users.reset_request') }}">Forgot Password</a>
                 </small>
             </fieldset>
             <div class="form-group">
@@ -45,7 +45,7 @@
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Don't have an account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up</a>
+                Don't have an account? <a class="ml-2" href="{{ url_for('users.register') }}">Sign Up</a>
             </small>
         </div>
     </div>
